2008-07-25  Benjamin Berg  <benjamin@sipsolutions.net>

	* schema/Makefile.am:
	* schema/smooth.xml.in.in:
	Forgot to remove the schema.

2008-07-25  Benjamin Berg  <benjamin@sipsolutions.net>

	* COPYING:
	* configure.ac:
	* engines/Makefile.am:
	* engines/smooth/*:
	* test/Makefile.am:
	* test/gtkrcs/smooth:
	Removed the smooth engine from gtk-engines.

2008-07-15  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Industrial/gtk-2.0/gtkrc:
	Move the progress bar match in the style. This fixes the
	network-manager applet.

2008-07-15  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/industrial/src/industrial_style.c: (real_draw_box_gap):
	Fill the gap in notebook correctly (bug #542625).

2008-06-16  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw*.c:
	(*_draw_list_view_header):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	* engines/clearlooks/src/clearlooks_types.h:
	Change the header button position enum to be a bitfield.
	(Bug #511958, Marcus Brinkmann)

2008-06-06  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_highlight_and_shade):
	Draw only half around the corners.

2008-05-29  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c
	(clearlooks_style_draw_shadow):
	* themes/Clearlooks/gtk-2.0/gtkrc:

	Changes menuitem separator height from 5 to 7

2008-05-12  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	2.15.1 release.

2008-05-12  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c
	(clearlooks_draw_button), (clearlooks_draw_tab),
	(clearlooks_draw_scrollbar_stepper),
	(clearlooks_draw_scrollbar_slider),
	(clearlooks_register_style_classic):
	Fixed tab stripe and different shadings from the original clearlooks.
	I think maybe they look better (smoother).

2008-05-12  Andrea Cimitan  <andrea.cimitan@gmail.com>
